--- a/src/App.css
+++ b/src/App.css
@@ -40,20 +40,11 @@ body{
     align-items: center;
 }
 
-button{
-    color: rgba(0, 32, 51, 1);
-    background-color: transparent;
+.buttons-flex{
+    display: flex;
+    border: 3px solid rgba(0, 66, 105, 0.28);
+    border-radius: 10px;
     font-size: 13px;
-    padding: 4px 12px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-
-}
-
-.active{
-    color: rgba(255, 255, 255, 1);
-    background-color: rgba(0, 120, 210, 1);
 }
 
 .text{
